# finscraper

./: .flake8  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  SPIDERS  VERSION  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pr-merge.yml  pr.yml  push-test.yml  release.yml  spiders.yml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  finscraper.rst  finscraper.scrapy_spiders.rst  index.rst  installation.rst  modules.rst  spiders.rst  usage.rst
finscraper/: _version.py  extensions.py  http.py  middlewares.py  pipelines.py  request.py  settings.py  spiders.py  text_utils.py  utils.py  wrappers.py
finscraper/scrapy_spiders/: demipage.py  extensions.py  ilarticle.py  isarticle.py  mixins.py  mnetpage.py  oikotieapartment.py  suomi24page.py  torideal.py  vauvapage.py  ylearticle.py
finscraper/spiders/: extensions.py  isarticle.py
scripts/: build-documentation.sh  install-local-conda-env.sh  release.sh
tests/: test_ilarticle.py  test_isarticle.py  test_spiders.py  test_vauvapage.py  test_wrappers.py  test_ylearticle.py  utils.py
