[project]
name = "finscraper"
description = "Web scraping API for Finnish websites"
authors = [
    { name = "Jesse Myrberg", email = "jesse.myrberg@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["web", "scraping", "finnish", "nlp", "scrapy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Framework :: Scrapy",
    "Natural Language :: Finnish",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.8"
dependencies = [
    "attrs>=21",
    "pandas>=1",
    "selenium>=4",
    "scrapy>=2.5",
    "tqdm>=4.46",
    "webdriver-manager>=2.4"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "twine"
]

[project.urls]
"Homepage" = "https://github.com/jmyrberg/finscraper"
"Documentation" = "https://finscraper.readthedocs.io"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "finscraper*"
]

[tool.setuptools_scm]
write_to = "finscraper/_version.py"
local_scheme = "no-local-version"
